# ProxySocks5

./: .gitignore  0001-test.h-helpers-para-testing.patch  0002-buffer.c-buffer-con-acceso-directo.patch  0003-hello.c-parser-del-mensaje-hello-de-SOCKS5.patch  0004-request.c-parser-del-request-de-SOCKS5.patch  0005-netutils.c-peque-as-utilidades.patch  0006-Servidor-socks5-bloqueante-iterativo-de-prueba.patch  0007-Sistema-de-construcci-n.patch  0008-selector.c-un-muliplexor-de-entrada-salida(1).patch  0009-stm.c-peque-o-motor-de-maquina-de-estados(1).patch  0010-Implementaci-n-de-socksv5-de-forma-no-bloqueante(1).patch  0011-cmake-como-m-todo-alternativo-de-construcci-n.patch  CMakeLists.txt  README  autogen.sh  configure.ac
src/: CMakeLists.txt  Makefile.am  main.c  socks5.c  socks5nio.c
